--- a/antora/components/refguide-index/modules/applib/pages/index/util/schema/CommonDtoUtils.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/util/schema/CommonDtoUtils.adoc
@@ -7,6 +7,10 @@
 .CommonDtoUtils.java
 ----
 class CommonDtoUtils {
+  D recordFundamentalValue(ValueType valueType, D valueDto, Object pojo)
+  Object getValueAsObject(ValueWithTypeDto valueDto)
+  Object getValueAsObject(ValueType valueType, ValueDto valueDto)
+  ValueWithTypeDto toValueWithTypeDto(ValueType valueType, ValueDto valueDto)
   String getMapValue(MapDto mapDto, String key)
   void putMapKeyValue(MapDto mapDto, String key, String value)
 }
