--- a/antora/components/refguide-index/modules/core/pages/index/metamodel/services/schema/SchemaValueMarshaller.adoc
+++ b/antora/components/refguide-index/modules/core/pages/index/metamodel/services/schema/SchemaValueMarshaller.adoc
@@ -13,13 +13,13 @@ interface SchemaValueMarshaller {
   Identifier actionIdentifier(ActionDto actionDto)     // <.>
   Identifier propertyIdentifier(PropertyDto propertyDto)     // <.>
   ManagedObject recoverReferenceFrom(OidDto oidDto)
-  ManagedObject recoverValueFrom(PropertyDto propertyDto)     // <.>
-  ManagedObject recoverValuesFrom(Identifier paramIdentifier, ParamDto paramDto)     // <.>
-  ActionInvocationDto recordActionResultScalar(ActionInvocationDto invocationDto, ObjectSpecification elementType, ManagedObject value)     // <.>
-  ActionInvocationDto recordActionResultNonScalar(ActionInvocationDto invocationDto, ObjectSpecification elementType, Can<ManagedObject> values)     // <.>
-  PropertyDto recordPropertyValue(PropertyDto propertyDto, ObjectSpecification elementType, ManagedObject value)     // <.>
-  ParamDto recordParamScalar(Identifier paramIdentifier, ParamDto paramDto, ObjectSpecification elementType, ManagedObject value)     // <.>
-  ParamDto recordParamNonScalar(Identifier paramIdentifier, ParamDto paramDto, ObjectSpecification elementType, Can<ManagedObject> values)     // <.>
+  ManagedObject recoverPropertyFrom(PropertyDto propertyDto)     // <.>
+  ManagedObject recoverParameterFrom(Identifier paramIdentifier, ParamDto paramDto)     // <.>
+  ActionInvocationDto recordActionResultScalar(ActionInvocationDto invocationDto, ObjectAction objectAction, ManagedObject value)     // <.>
+  ActionInvocationDto recordActionResultNonScalar(ActionInvocationDto invocationDto, ObjectAction objectAction, Can<ManagedObject> values)     // <.>
+  PropertyDto recordPropertyValue(PropertyDto propertyDto, OneToOneAssociation property, ManagedObject value)     // <.>
+  ParamDto recordParamScalar(ParamDto paramDto, ObjectActionParameter param, ManagedObject value)     // <.>
+  ParamDto recordParamNonScalar(ParamDto paramDto, ObjectActionParameter param, Can<ManagedObject> values)     // <.>
 }
 ----
 
@@ -38,37 +38,37 @@ Recovers an _Action's_ xref:refguide:applib:index/Identifier.adoc[Identifier] fr
 --
 Recovers a _Property's_ xref:refguide:applib:index/Identifier.adoc[Identifier] from given DTO.
 --
-<.> xref:#recoverValueFrom__PropertyDto[recoverValueFrom(PropertyDto)]
+<.> xref:#recoverPropertyFrom__PropertyDto[recoverPropertyFrom(PropertyDto)]
 +
 --
-Recovers a property value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ .
+Recovers a property value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ . Cardinality _0..1_
 --
-<.> xref:#recoverValuesFrom__Identifier_ParamDto[recoverValuesFrom(Identifier, ParamDto)]
+<.> xref:#recoverParameterFrom__Identifier_ParamDto[recoverParameterFrom(Identifier, ParamDto)]
 +
 --
-Recovers a parameter value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
+Recovers a parameter value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ . Cardinality _0..n_
 --
-<.> xref:#recordActionResultScalar__ActionInvocationDto_ObjectSpecification_ManagedObject[recordActionResultScalar(ActionInvocationDto, ObjectSpecification, ManagedObject)]
+<.> xref:#recordActionResultScalar__ActionInvocationDto_ObjectAction_ManagedObject[recordActionResultScalar(ActionInvocationDto, ObjectAction, ManagedObject)]
 +
 --
 Records given result value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action_ .
 --
-<.> xref:#recordActionResultNonScalar__ActionInvocationDto_ObjectSpecification_Can[recordActionResultNonScalar(ActionInvocationDto, ObjectSpecification, Can)]
+<.> xref:#recordActionResultNonScalar__ActionInvocationDto_ObjectAction_Can[recordActionResultNonScalar(ActionInvocationDto, ObjectAction, Can)]
 +
 --
 Records given result values into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action_ .
 --
-<.> xref:#recordPropertyValue__PropertyDto_ObjectSpecification_ManagedObject[recordPropertyValue(PropertyDto, ObjectSpecification, ManagedObject)]
+<.> xref:#recordPropertyValue__PropertyDto_OneToOneAssociation_ManagedObject[recordPropertyValue(PropertyDto, OneToOneAssociation, ManagedObject)]
 +
 --
 Records given property value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ .
 --
-<.> xref:#recordParamScalar__Identifier_ParamDto_ObjectSpecification_ManagedObject[recordParamScalar(Identifier, ParamDto, ObjectSpecification, ManagedObject)]
+<.> xref:#recordParamScalar__ParamDto_ObjectActionParameter_ManagedObject[recordParamScalar(ParamDto, ObjectActionParameter, ManagedObject)]
 +
 --
 Records given parameter value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
 --
-<.> xref:#recordParamNonScalar__Identifier_ParamDto_ObjectSpecification_Can[recordParamNonScalar(Identifier, ParamDto, ObjectSpecification, Can)]
+<.> xref:#recordParamNonScalar__ParamDto_ObjectActionParameter_Can[recordParamNonScalar(ParamDto, ObjectActionParameter, Can)]
 +
 --
 Records given parameter values into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
@@ -91,39 +91,39 @@ Recovers an _Action's_ xref:refguide:applib:index/Identifier.adoc[Identifier] fr
 
 Recovers a _Property's_ xref:refguide:applib:index/Identifier.adoc[Identifier] from given DTO.
 
-[#recoverValueFrom__PropertyDto]
-=== recoverValueFrom(PropertyDto)
+[#recoverPropertyFrom__PropertyDto]
+=== recoverPropertyFrom(PropertyDto)
 
-Recovers a property value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ .
+Recovers a property value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ . Cardinality _0..1_
 
-[#recoverValuesFrom__Identifier_ParamDto]
-=== recoverValuesFrom(Identifier, ParamDto)
+[#recoverParameterFrom__Identifier_ParamDto]
+=== recoverParameterFrom(Identifier, ParamDto)
 
-Recovers a parameter value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
+Recovers a parameter value, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ . Cardinality _0..n_
 
 Packed up if non-scalar.
 
-[#recordActionResultScalar__ActionInvocationDto_ObjectSpecification_ManagedObject]
-=== recordActionResultScalar(ActionInvocationDto, ObjectSpecification, ManagedObject)
+[#recordActionResultScalar__ActionInvocationDto_ObjectAction_ManagedObject]
+=== recordActionResultScalar(ActionInvocationDto, ObjectAction, ManagedObject)
 
 Records given result value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action_ .
 
-[#recordActionResultNonScalar__ActionInvocationDto_ObjectSpecification_Can]
-=== recordActionResultNonScalar(ActionInvocationDto, ObjectSpecification, Can)
+[#recordActionResultNonScalar__ActionInvocationDto_ObjectAction_Can]
+=== recordActionResultNonScalar(ActionInvocationDto, ObjectAction, Can)
 
 Records given result values into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action_ .
 
-[#recordPropertyValue__PropertyDto_ObjectSpecification_ManagedObject]
-=== recordPropertyValue(PropertyDto, ObjectSpecification, ManagedObject)
+[#recordPropertyValue__PropertyDto_OneToOneAssociation_ManagedObject]
+=== recordPropertyValue(PropertyDto, OneToOneAssociation, ManagedObject)
 
 Records given property value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Property_ .
 
-[#recordParamScalar__Identifier_ParamDto_ObjectSpecification_ManagedObject]
-=== recordParamScalar(Identifier, ParamDto, ObjectSpecification, ManagedObject)
+[#recordParamScalar__ParamDto_ObjectActionParameter_ManagedObject]
+=== recordParamScalar(ParamDto, ObjectActionParameter, ManagedObject)
 
 Records given parameter value into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
 
-[#recordParamNonScalar__Identifier_ParamDto_ObjectSpecification_Can]
-=== recordParamNonScalar(Identifier, ParamDto, ObjectSpecification, Can)
+[#recordParamNonScalar__ParamDto_ObjectActionParameter_Can]
+=== recordParamNonScalar(ParamDto, ObjectActionParameter, Can)
 
 Records given parameter values into given DTO object, using xref:refguide:applib:index/value/semantics/ValueSemanticsProvider.adoc[ValueSemanticsProvider] for corresponding _Action Parameter_ .
