--- a/core/config/src/main/adoc/modules/config/pages/sections/isis.core.meta-model.validator.adoc
+++ b/core/config/src/main/adoc/modules/config/pages/sections/isis.core.meta-model.validator.adoc
@@ -111,25 +111,27 @@ jdoql.variables-clause
 
 
 |
-[[isis.core.meta-model.validator.no-params-only]]
-isis.core.meta-model.validator. +
-no-params-only
-
-| 
-| If set, then checks that the supports ``hideXxx`` and ``disableXxx`` methods for actions do not have take parameters.
-
-Historically, the programming model allowed these methods to accept the same number of parameters as the action method to which they relate, the rationale being for similarity with the ``validateXxx`` method. However, since these parameters serve no function, the programming model has been simplified so that these supporting methods are discovered if they have exactly no parameters.
-
-Note that this aspect of the programming model relates to the ``hideXxx`` and ``disableXxx`` supporting methods that relate to the entire method. Do not confuse these with the ``hideNXxx`` and ``disableNXxx`` supporting methods, which relate to the N-th parameter, and allow up to N-1 parameters to be passed in (allowing the Nth parameter to be dynamically hidden or disabled).
-
-
-|
 [[isis.core.meta-model.validator.parallelize]]
 isis.core.meta-model.validator. +
 parallelize
 
 |  true
 | Whether to perform metamodel validation in parallel.
+
+
+|
+[[isis.core.meta-model.validator.no-params-only]]
+isis.core.meta-model.validator. +
+no-params-only
+
+|  true
+| If set, then checks that the supports ``hideXxx`` and ``disableXxx`` methods for actions do not have take parameters.
+
+Historically, the programming model allowed these methods to accept the same number of parameters as the action method to which they relate, the rationale being for similarity with the ``validateXxx`` method. However, since these parameters serve no function, the programming model has been simplified so that these supporting methods are discovered if they have exactly no parameters.
+
+Note that this aspect of the programming model relates to the ``hideXxx`` and ``disableXxx`` supporting methods that relate to the entire method. Do not confuse these with the ``hideNXxx`` and ``disableNXxx`` supporting methods, which relate to the N-th parameter, and allow up to N-1 parameters to be passed in (allowing the Nth parameter to be dynamically hidden or disabled).
+
+@deprecated this option is ignored by the framework, behavior is now fixated to noParamsOnly = true
 
 
 
