--- a/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
@@ -367,13 +367,26 @@ git add .
 git commit -m "$ISISJIRA: updates references to version in index.html and site.yml"
 ----
 
-We are now in a position to actually generate the Antora website:
+We are now in a position to actually generate the Antora website.
+(NOTE, this needs to be performed in the `../isis` directory because Antora currently doesn't support git worktrees)
+
+* build prereqs
++
+[source,bash,subs="attributes+"]
+----
+git checkout $ISISBRANCH
+pushd isis-parent
+mvn clean install -DskipTests -Dreleased
+popd
+mvn clean install -pl core/config
+mvn -D module-tooling -D skip.essential install -DskipTests
+----
 
 * generate the website:
 +
 [source,bash,subs="attributes+"]
 ----
-sh preview.sh
+bash preview.sh
 ----
 +
 This will write to `antora/target/site`; we'll use the results in the xref:#publish-website[next section].
