--- a/antora/components/relnotes/modules/ROOT/pages/about.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/about.adoc
@@ -16,6 +16,16 @@ This table summarises all releases of Apache Isis v2.0 to date.
 | Bugs
 | Detail
 
+| 2.0.0-RC1
+| not released yet (upcoming)
+| First release candidate for Apache Isis 2.0.0
+| ?
+| ?
+| ?
+|
+* xref:relnotes:ROOT:2022/2.0.0-RC1/relnotes.adoc[Release Notes]
+* xref:relnotes:ROOT:2022/2.0.0-RC1/mignotes.adoc[Migration Notes]
+
 | 2.0.0-M7
 | not released yet (upcoming)
 | Seventh milestone release for Apache Isis 2.0.0
@@ -23,8 +33,8 @@ This table summarises all releases of Apache Isis v2.0 to date.
 | ?
 | ?
 |
-* xref:relnotes:ROOT:2021/2.0.0-M7/relnotes.adoc[Release Notes]
-* xref:relnotes:ROOT:2021/2.0.0-M7/mignotes.adoc[Migration Notes]
+* xref:relnotes:ROOT:2022/2.0.0-M7/relnotes.adoc[Release Notes]
+* xref:relnotes:ROOT:2022/2.0.0-M7/mignotes.adoc[Migration Notes]
 
 | 2.0.0-M6
 | 26-08-2021
