ISIS-2964: site: recreate index

--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/Nature.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/Nature.adoc
@@ -14,8 +14,11 @@ enum Nature {
   VIEW_MODEL     // <.>
   MIXIN     // <.>
   BEAN     // <.>
+  boolean isNotSpecified()
   boolean isEntity()
   boolean isMixin()
+  boolean isViewModel()
+  boolean isBean()
 }
 ----
 
